# mini-game-finder

./: .env  .env.example  .gitattributes  .gitignore  COMMUNITY_REACTIONS_HARDENING.md  DEPLOY_DATABASE_HARDENING.md  Makefile  OPS_README.md  PRODUCTION_RUNBOOK.md  PRODUCTION_SCHEMA_FIX.sql  PROMOTION_WAR_REDESIGN.md  Procfile  README.md  SETUP_GUIDE.md  add_all_new_riddles.py  add_arcade_community_tables.py  add_batch2_riddles.py  add_batch3_riddles.py  add_batch4_riddles.py  add_batch5_riddles.py  add_batch6_riddles.py  add_display_name_column.py  add_more_riddles.py  add_notifications_table.sql  add_production_columns.sql  add_progressive_cooldown_columns.py  add_user_timezone_column.sql  add_welcome_pack_column.py  admin_monitoring.py  alembic.ini  api_routes.py  app.db  app.py  categories.csv  celery_app.py  check_columns.py  check_db.py  check_missing_database_components.sql  check_riddle_migration.py  check_riddle_stats.py  (+75 more)
.claude/: settings.local.json
archive_backup/: brand_home.html  brand_privacy.html  brand_terms.html  store.html
blueprints/: README.md  __init__.py  arcade.py  credits.py  game.py  prefs.py  riddle.py
extensions/: scheduler.py
gaming_routes/: gaming_community.py  leaderboard.py  redis_leaderboard.py  wallet.py  wars.py
instance/: local.db  local.db-journal
migrations/: README.md  README_database_fixes.md  add_boost_penalty_columns.sql  add_challenge_gate_column.sql  add_jsonb_preferences.sql  add_riddle_tables.sql  block_a_credits_system.sql  env.py  fix_post_reactions_id_column.sql  fix_users_email_nulls.sql
routes/: badges.py  gaming_community.py  wars.py
services/: credits.py  leaderboard.py  war_badges.py  war_badges_catalog.py
summarize/: comprehensive-website-fixes-jan-06-2025.md  riddle-master-challenge-gate-sept-18-2025.md
tasks/: __init__.py  decay.py  promotion_wars.py  wars_finish.py
templates/: _components.html  admin.html  base.html  brand_community.html  brand_guide.html  brand_home.html  brand_profile.html  brand_store.html  brand_wallet.html  community.html  daily_leaderboard.html  faq.html  game-counters-demo.html  game.html  home.html  index.html  leaderboard.html  leaderboard_arcade.html  login.html  login.html.new  play.html  policy.html  privacy.html  profile.html  redis_leaderboard.html  (+11 more)
(+90 files in other folders)
